# redesigned-waffle

./: .gitignore  Cargo.toml  README.md  api.rest  compose.yml  doc.md
.sqlx/: query-0493b59014c1f942c214d258e9edebd689f4928d1ee79cd9b83cf1578460ff77.json  query-0b2563bef26b5834c27325ebb0ef59d902d7c688ae9837bff4603ad29c971ca0.json  query-2093936d3960ba00c086cdb977b95871d26b715e91e7fb2a37849f6614daa09b.json  query-23e0f4d2f6e1bb3e7cfb1360b88323e9d7970be462743ca4c59f25746cf25244.json  query-298bc9ac0f99fd3d4d098d9c5285778889e058e74da3de1b588851547fa3db1c.json  query-33721ba9c4bff2e1ee13646fa4fb9a36b99c5faa318754af6b5f3da05583dac5.json  query-3775537946707d19e72578927faa45b3a24a426e3ecfb9a48722a73c0da332bd.json  query-3f54e3d53c9b6a817c5ca0a6976df4c64b055c6b00d1f820a7625cd00c075b98.json  query-45af20df2131d032bb35c7d30e71073757624392b7ae0e845afb968e857b0e14.json  query-4caab97f5bb3fcdbd48f13f3d2affbd97420626841c0d886f8ff33513e2bdd9a.json  query-538f63cf9c7eb654de2a78dc00b7e97c0d05a4be5810f1baf39c50af94c672c5.json  query-57f6b55c033fe8141d9f465d82c27256d456a1697551b77f3e9deee5cc9d91ed.json  query-5c5492ae18255e511efa10e77bd09c38e9799f3fee12ed3fa6b5904c2f046aa8.json  query-600c444c3348e12c942af3548a2ed4183277e6723a0e65f98c29717d2256423c.json  query-60c9293bc04502b6bf97bd83b81b902f3fb52766ab83cde1853e8f6b47687dde.json  query-6aca603bf27947b032b960b9abcf39e70681d3b8491c9834cb3cc2e50e8cf6eb.json  query-6f2a39da49be00ac4efa1b2a2c1207f15556afc8825aa8ed42ebfaefcfd17ea7.json  query-87280fcb5ec8879b03077264992590e185fe9e2480cfae62ab069a104127706c.json  query-9551fa817acb51ab32718e4fe2301ef6c7b98194fd33c5f7b0b06a73d86f166b.json  query-a6fdfc0991c84bac756c88a161031d84f2bf9ac93968f56800000697ee06caa8.json  query-a7b06d08ddb157348d018dcf4ba6fcb16913727ebdc54245d4ccfa0d9b6bb9ed.json  query-cd4dc1e30b73a5787ae398233fd65127efbe6f1bb0b20cdb3ece2dd5bc563852.json  query-d3fd08fd3eb3b71641b06ec6143c53589f357b8e4ff7b92e900329081ab991b9.json  query-d51b4c6fe75c8ddd815676183b8077fa1a872f9fbc915c483c66c501e25a95d7.json  query-df0cd0f83f55aaafdfda5036dc815d61236a7be314ddf3cbd736ba1bafea87e4.json  query-df9828f222d1ce39679c19d9a74a5eb21a7d0b55f14a2aa58d8ad56506b4678e.json  query-e4b831b2daf94842dbe4c0d70e5d078b6c9be6e7e7b294dd49751b5642740216.json  query-f6c0ba1686bf2112cfc385032c7203bffb639fd46009950065d5d7fe2b304461.json  (+1 more)
(+29 files in other folders)
