[package]
name = "elebuild"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.8"
# The OG
actix-web = "4"
# For timestamp
chrono = { version = "0.4.42", features = ["serde"] }
derive_more = "2.0.1"
# Env variables
dotenv = "0.15.0"
# Future related helpers
futures = "0.3.31"
# JWT
jsonwebtoken = "9"
# Logger
log = "0.4.28"

pretty_env_logger = "0.5.0"

rust-argon2 = { version = "3.0", features = ["serde"] }

serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = "1.18.1"

[features]

[profile.release]
lto = "thin"
strip = "debuginfo"

[profile.release-speed]
inherits = "release"
lto = true
strip = "symbols"
panic = "abort"
